--- a/src/templates/users/settings/links.pug
+++ b/src/templates/users/settings/links.pug
@@ -97,11 +97,15 @@ script.
 					$(this).attr('name', id).attr('id', id).val('').removeAttr("checked");
 				});
 
+
 				oldrow.after(row);
 				rows_count ++;
 
 				// Clean error fields in new rows
 				row.find('.fieldset-row-error').remove();
+
+				// Focus on the name field
+				row.find(":input[name$='name']").focus();
 
 				// Count rows update add and delete buttons
 				if (rows_count >= max_entries) $btn_add_row.addClass('disabled').next('span.fieldset-notice').show();
