--- a/src/styles/_settings_base.sass
+++ b/src/styles/_settings_base.sass
@@ -5,43 +5,53 @@
 		margin: 0 15px
 		width: 100%
 
-.settings-form
-	.fieldset-row
-		display: flex
-		margin: 10px auto
+.settings
+	&-avatar
+		img
+			// Shouldn't need !important, to be fixed in Pillar
+			border-radius: 50% !important
 
-		input[type="text"],
-		input[type="url"]
-			background-color: $color-background
-			display: block
-			padding: 5px 10px
-			width: 100%
+	&-form
+		.fieldset-row
+			display: flex
+			margin: 10px auto
 
-		.btn
-			margin-left: auto
+			&.disabled
+				cursor: default
+				opacity: .5
 
-		.btn i
-			margin-right: 0
+			input[type="text"],
+			input[type="url"]
+				background-color: $color-background
+				display: block
+				padding: 5px 10px
+				width: 100%
 
-		&-error
-			color: $color-danger
-			font-size: $font-size-small
+			.btn
+				margin-left: auto
+
+			.btn i
+				margin-right: 0
+
+			&-error
+				color: $color-danger
+				font-size: $font-size-small
+				padding-top: 5px
+
+		.fieldset-field
+			flex: 1
+			margin-right: 10px
+			padding:
+				top: 5px
+				right: 25px
+
+			input
+				flex: 1
+
+		.fieldset-field-action
 			padding-top: 5px
 
-	.fieldset-field
-		flex: 1
-		margin-right: 10px
-		padding:
-			top: 5px
-			right: 25px
-
-		input
-			flex: 1
-
-	.fieldset-field-action
-		padding-top: 5px
-
-	.fieldset-notice
-		color: $color-text-dark-primary
-		display: none
-		padding-left: 10px
+		.fieldset-notice
+			color: $color-text-dark-primary
+			display: none
+			padding-left: 10px
