Improve UX on add and remove links

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1280,6 +1280,9 @@ $wgt-dropdown-width: 150px
     user-select: none
     text-decoration: none
 
+.hidden
+  display: none !important
+  visibility: hidden !important
 
 // Animations
 @-webkit-keyframes fLoaderBackground
