--- a/src/templates/users/settings/links.pug
+++ b/src/templates/users/settings/links.pug
@@ -2,8 +2,20 @@
 
 | {% block settings_page_title %}{{ _("Links") }}{% endblock %}
 | {% block settings_page_content %}
+| {# If we have links in the links fields list, we will display some UI elements, otherwise not #}
+| {% if (form.links | length == 0) %}{% set link_list_dependent_visibility = 'hidden' %}{% endif %}
+
 p {{ _("Display custom links (your website, social media links, etc, on your profile.") }}
 .settings-form
+	.fieldset-row-sample(data-toggle='fieldset-entry-sample', style='display: none')
+		.fieldset-field
+			input#links-00-name(name='links-00-name', placeholder='Title', type='text', value='')
+		.fieldset-field
+			input#links-00-url(name='links-00-url', placeholder='URL', type='url', value='')
+		.fieldset-field-action
+			button#link-00-remove.btn.btn-danger(type='button', data-toggle='fieldset-remove-row')
+				i.pi-trash
+
 	form#settings-form(method='POST', action="{{url_for('settings.links')}}")
 		| {{ form.csrf_token }}
 		.fieldset-container(data-toggle="fieldset" data-max_entries="{{ form.links.max_entries }}", id="link-fieldset")
@@ -15,7 +27,7 @@ p {{ _("Display custom links (your website, social media links, etc, on your pro
 				| #[i.pi-plus] {{ _("Add Link") }}
 			span.fieldset-notice {{ _("Maximum") }} #[span.max 5] {{ _("links") }}
 
-			.fieldset-row
+			.fieldset-row.fieldset-labels(class='{{link_list_dependent_visibility}}')
 				.fieldset-field
 					label {{ _("Title") }}
 				.fieldset-field
@@ -47,8 +59,6 @@ p {{ _("Display custom links (your website, social media links, etc, on your pro
 						type="button",
 						data-toggle="fieldset-remove-row",
 						id="link-{{loop.index0}}-remove",
-						{# We add the CSS property here because $this.show does not work otherwise #}
-						style="display:none;"
 					)
 						i.pi-trash
 
@@ -56,7 +66,7 @@ p {{ _("Display custom links (your website, social media links, etc, on your pro
 
 			hr
 
-			.buttons
+			.buttons(class='{{link_list_dependent_visibility}}')
 				button.btn.btn-info(type='submit')
 					i.pi-check
 					| {{ _("Save Changes") }}
@@ -78,33 +88,48 @@ script.
 		$("div[data-toggle=fieldset]").each(function () {
 			var $this = $(this);
 			var $btn_add_row = $this.find("button[data-toggle=fieldset-add-row]");
+			// Define remove_row to attach removal event
 			var $btn_remove_row = $this.find("button[data-toggle=fieldset-remove-row]");
 			var $div_target = $($btn_add_row.data("target"));
 			// Get the initial count of rows, which is then increased or decreased on add or remove
 			var rows_count = $div_target.find("div[data-toggle=fieldset-entry]").length;
 			var max_entries = $this.data("max_entries");
+			// TODO make generic attribute to be referenced by multiple forms
+			var $fieldset_entry_sample = $("div[data-toggle=fieldset-entry-sample]:first");
+			// Define remove_row_sample to attach removal event
+			var $btn_remove_row_sample = $fieldset_entry_sample.find("button[data-toggle=fieldset-remove-row]");
 			$div_target.find('span.fieldset-notice span.max').text(max_entries);
 
 			// Count rows update add and delete buttons
 			if (rows_count >= max_entries) $btn_add_row.addClass('disabled').next('span.fieldset-notice').show();
-			if (rows_count > 1) $btn_remove_row.show();
 
 			// Add new entry
 			$btn_add_row.click(function () {
-
 				var oldrow = $div_target.find("div[data-toggle=fieldset-entry]:last");
-				var row = oldrow.clone(true, true);
-
+				if (oldrow.length > 0) {
+					var row = oldrow.clone(true, true);
+				} else {
+					var row = $fieldset_entry_sample.clone(true, true);
+				}
 				var elem_id = row.find(":input")[0].id;
-				var elem_num = parseInt(elem_id.replace(/.*-(\d{1,4})-.*/m, '$1')) + 1;
-				row.attr('data-id', elem_num);
-				row.find(":input").each(function () {
-					var id = $(this).attr('id').replace('-' + (elem_num - 1) + '-', '-' + (elem_num) + '-');
-					$(this).attr('name', id).attr('id', id).val('').removeAttr("checked");
+				// Define elem_id_string, which could be 00
+				var elem_id_string = elem_id.replace(/.*-(\d{1,4})-.*/m, '$1');
+				var elem_num = parseInt(elem_id_string, 10);
+				var elem_num_next = elem_num + 1;
+				row.attr('data-id', elem_num_next);
+				row.find(':input').each(function () {
+					var id = $(this).attr('id').replace('-' + (elem_id_string) + '-', '-' + (elem_num_next) + '-');
+					$(this).attr('name', id).attr('id', id).val('').removeAttr('checked');
 				});
 
+				if (oldrow.length > 0) {
+					oldrow.after(row);
+				} else {
+					row.toggleClass('fieldset-row-sample fieldset-row');
+					row.attr('data-toggle', 'fieldset-entry');
+					$('.fieldset-row').after(row.show());
+				}
 
-				oldrow.after(row);
 				rows_count ++;
 
 				// Clean error fields in new rows
@@ -115,18 +140,20 @@ script.
 
 				// Count rows update add and delete buttons
 				if (rows_count >= max_entries) $btn_add_row.addClass('disabled').next('span.fieldset-notice').show();
-				if (rows_count > 1) $this.find("button[data-toggle=fieldset-remove-row]").show();
-
+				if (rows_count > 0) {
+					$('.fieldset-labels').removeClass('hidden');
+					$('.buttons').removeClass('hidden');
+				}
 			});
 
 			//Remove row
-			$btn_remove_row.click(function () {
+			$btn_remove_row.add($btn_remove_row_sample).click(function () {
 				var thisRow = $(this).closest("div[data-toggle=fieldset-entry]");
 				thisRow.remove();
 				rows_count--;
 				// Count rows update add and delete buttons
 				if (rows_count < max_entries) $btn_add_row.removeClass('disabled').next('span.fieldset-notice').hide();;
-				if (rows_count === 1) $this.find("button[data-toggle=fieldset-remove-row]").hide();
+				// if (rows_count === 1) $this.find("button[data-toggle=fieldset-remove-row]").hide();
 			});
 		});
 	});
