--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -186,7 +186,7 @@ html(lang='en')
 											href="{{ url_for('users.users_view', username=current_user.username) }}"
 											title="{{ _('Profile') }}")
 											i.pi-vcard
-											| {{ _('Profile') }}
+											| {{ _('My Profile') }}
 									li
 										a(
 											href="{{ url_for('settings.profile') }}"
