--- a/src/styles/_user.sass
+++ b/src/styles/_user.sass
@@ -5,11 +5,6 @@
 		justify-content: center
 		padding: 50px 25px
 
-		&-info
-			padding: 0 10px
-			margin-left: 25px
-			border-left: thin solid $color-background-dark
-
 		&-name
 			font-size: 1.8em
 			padding-left: 10px
@@ -19,17 +14,30 @@
 			padding-left: 10px
 			text-decoration: none
 
-		&-meta
-			color: $color-text-dark-secondary
-			font-size: $font-size-small
-			margin: 20px 0 0
+		&-info
+			padding: 0 10px
+			margin-left: 15px
 
-			strong
-				margin-right: 5px
+			&-extra
+				color: $color-text-dark-secondary
+				display: flex
+				font-size: $font-size-small
+
+		&-meta
+			padding-left: 10px
+
+			a
+				color: $color-text-dark-secondary
+
+				&:hover
+					color: $color-primary
 
 		ul
 			list-style: none
 			padding: 0
+
+			li
+				padding-bottom: 5px
 
 		&-avatar
 			img
@@ -37,7 +45,7 @@
 				box-shadow: 1px 2px 2px rgba(black, .2)
 
 		&-links
-			padding: 0 10px
+			padding: 0 20px 0 10px
 
 			ul
 				li a
@@ -50,3 +58,5 @@
 
 				img
 					margin-right: 10px
+					min-height: 16px
+					min-width: 16px
