Remove version for assets, Pillar takes care of caches

--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -12,7 +12,7 @@ html(lang='en')
 
 		| {% block head %}{% endblock head %}
 		link(href='//fonts.googleapis.com/css?family=Oxygen|Open+Sans:400,600', rel='stylesheet', type='text/css')
-		link(href="{{ url_for('static_pillar', filename='assets/css/font-pillar.css', v=171120161) }}", rel='stylesheet')
+		link(href="{{ url_for('static_pillar', filename='assets/css/font-pillar.css') }}", rel='stylesheet')
 		| {% if is_main_project %}
 		link(rel='alternate', title="Atom", type="application/atom+xml" href="{{ url_for('posts.feed_all_communities') }}")
 		| {% else %}
@@ -259,9 +259,9 @@ html(lang='en')
 
 		script(src="{{ url_for('static_pillar', filename='assets/js/vendor/jquery-3.1.0.min.js')}}")
 		script(src="{{ url_for('static_pillar', filename='assets/js/tutti.min.js') }}")
-		script(src="{{ url_for('static_pillar', filename='assets/js/markdown.min.js') }}")
 		script(src="{{ url_for('static_dillo', filename='js/generated/tutti.min.js') }}")
 		script(src="{{ url_for('static_dillo', filename='js/vendor/moment-2.18.1-with-locales.min.js') }}")
+
 		script.
 			moment.locale("{{ g.get('locale', 'en_US') }}");
 		script(src="https://twemoji.maxcdn.com/2/twemoji.min.js?2.2.3")
