Introducing ALGOLIA_INDEX_NODES_REPLICAS
This commits automates the creation of replica indexes and allows for
multiple sorting options when displaying the posts list.

--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -481,7 +481,8 @@ script.
 			container: '#list-sort-by',
 			indices: [
 				{name: '{{ config.ALGOLIA_INDEX_NODES }}', label: "{{ _('Hot') }}"},
-				{name: '{{ config.ALGOLIA_INDEX_NODES_SORTED_RECENT }}', label: "{{ _('Recent') }}"}
+				{name: '{{ config.ALGOLIA_INDEX_NODES }}{{config.ALGOLIA_INDEX_NODES_REPLICAS["created"]}}', label: "{{ _('Recent') }}"},
+				{name: '{{ config.ALGOLIA_INDEX_NODES }}{{config.ALGOLIA_INDEX_NODES_REPLICAS["rating"]}}', label: "{{ _('Rating') }}"},
 			],
 			cssClasses: {
 				root: 'wgt-dropdown-header'
