Link Markdown Cheatsheet to CommonMark help

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -49,7 +49,7 @@
 						| {{ node.properties.content }}
 
 					span.content-extra
-						a(href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet")
+						a(href="http://commonmark.org/help/")
 							| {{ _('Markdown Cheatsheet') }}
 
 
