--- a/src/styles/main_dark.sass
+++ b/src/styles/main_dark.sass
@@ -1,4 +1,8 @@
 // First load Pillar's config as fallback, then Dillo's
+@import ../../../pillar/node_modules/bootstrap/scss/functions
+@import ../../../pillar/node_modules/bootstrap/scss/variables
+@import ../../../pillar/node_modules/bootstrap/scss/mixins
+
 @import ../../../pillar/src/styles/_config
 @import _config_global
 
