UI: Minor layout and style fixes.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -22,6 +22,9 @@ hr
   background-color: $color-background-dark
   border: none
 
+body
+  background-color: $color-background
+
 body[data-context='post-fullscreen']
   .d-header
     box-shadow: 0 0 15px 5px $color-background-dark
