--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -795,7 +795,7 @@ body[data-context="post-edit"]
   color: rgba($color-text, .7)
   display: none
   font-size: $font-size-small
-  padding: 10px 25px 0 60px
+  padding-left: 60px
 
   span
     +text-overflow-ellipsis
