--- a/src/templates/dillo/index.pug
+++ b/src/templates/dillo/index.pug
@@ -103,7 +103,7 @@ li
 		span.btn.btn-submit.wgt-dropdown-toggle
 			i.pi-angle-down
 
-			ul.dropdown-menu.right
+			ul.dropdown-menu.dropdown-menu-right
 				li
 					a.btn.btn-submit.post(
 						href="{{ url_for('posts.create', community_url=project.url, post_type='text') }}",
