--- a/src/templates/layout.pug
+++ b/src/templates/layout.pug
@@ -175,7 +175,7 @@ html(lang='en')
 									.dropdown-toggle-icon
 										i.pi-angle-down
 
-								ul.dropdown-menu.right
+								ul.dropdown-menu.dropdown-menu-right
 									li
 										a.theme-toggle(
 											title="{{ _('Turn off the lights') }}")
