--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -156,7 +156,7 @@
 				i.pi-social-reddit
 
 	#item-comments
-		.item-commenting-on
+		.item-commenting-on.py-3
 			span {{ _("Leave a comment on") }} #[strong {{ project.name }} - {{ node.name }}]
 		#comments-embed
 
