Introducing POST_ADDITIONAL_PROPERTIES
Support for custom properties that are defined on a per-project basis.

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -64,6 +64,10 @@
 						| Add New Attachment
 				| {{ render_field(field, field.name) }}
 				| {% endif %} {# post_type #}
+				// Display any additional props that we want to support (for example RCS).
+					See config.py to learn more about POST_ADDITIONAL_PROPERTIES.
+				| {% elif field.name in config['POST_ADDITIONAL_PROPERTIES']%}
+				| {{ render_field(field, field.name) }}
 				| {% endif %}
 				| {% endfor %}
 
