UI: Fix Settings styling.
Also, remove redundant settings css/sass file.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -286,7 +286,7 @@ body[data-context='post-fullscreen']
   text-decoration: none
 
 .btn
-  +button-dillo($color-background, 5px, false)
+  +button-dillo($color-text, 5px, false)
 
   &.publish
     +button-dillo($color-success, 5px, true)
