--- a/src/templates/users/settings/page.pug
+++ b/src/templates/users/settings/page.pug
@@ -1,16 +1,18 @@
 | {% extends 'users/settings/base.html' %}
+include ../../../../../pillar/src/templates/mixins/components
+
 | {% block stylesheets %}
-link(rel='stylesheet', title="light", type="text/css", href="{{ url_for('static_dillo', filename='css/settings.css') }}")
-link(disabled, rel='alternate stylesheet', title="dark", type="text/css", href="{{ url_for('static_dillo', filename='css/settings_dark.css') }}")
+link(rel='stylesheet', title="dark", type="text/css", href="{{ url_for('static_dillo', filename='css/main_dark.css') }}")
+link(disabled, rel='alternate stylesheet', title="light", type="text/css", href="{{ url_for('static_dillo', filename='css/main.css') }}")
 | {% endblock stylesheets %}
 
 | {% block settings_sidebar_menu %}
 | {{ super() }}
-a(class="{% if title == 'links' %}active{% endif %}",
++nav-secondary-link(
+	class="{% if title == 'links' %}active{% endif %} border-top",
 	href="{{ url_for('settings.links') }}")
-	li
-		i.pi-link
-		| {{ _("Links") }}
+	i.pr-3.pi-link
+	span {{ _("Links") }}
 
 | {% endblock settings_sidebar_menu %}
 | {% block settings_sidebar_menu_bottom %}
