UI: Rely on fonts set globally.
Don't force font styles when not needed.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1103,9 +1103,7 @@ $wgt-dropdown-width: 150px
     border-radius: 3px
     cursor: pointer
     display: flex
-    font:
-      family: $font-headings
-      weight: lighter
+    font-weight: lighter
     min-width: $wgt-dropdown-width
     min-height: $widget-min-height
     padding-left: 10px
@@ -1277,9 +1275,7 @@ $wgt-dropdown-width: 150px
     color: var(--community-theme-color, $color-primary)
     cursor: pointer
     display: flex
-    font:
-      family: $font-headings
-      weight: lighter
+    font-weight: lighter
     user-select: none
     text-decoration: none
 
