--- a/src/styles/_item.sass
+++ b/src/styles/_item.sass
@@ -1,9 +1,10 @@
 // Listing item
 .item-title
-  font-family: $font-headings
   line-height: 1.3em
-  text-decoration: none
   transition: color 100ms ease-in-out
+
+  &:hover
+    text-decoration: none
 
   em
     color: var(--community-theme-color, $color-primary)
