--- a/src/styles/_utils.sass
+++ b/src/styles/_utils.sass
@@ -3,11 +3,8 @@
 	border-radius: $roundness
 	box-shadow: 1px 1px 1px 0 rgba(black, .2)
 	display: inline-flex
-	font:
-		family: $font-body
-		weight: bold
+	font-weight: bold
 	justify-content: center
-
 	text-decoration: none
 	white-space: nowrap
 
