--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -23,7 +23,7 @@ hr
   border: none
 
 body
-  background-color: $color-background
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
 body[data-context='post-fullscreen']
   .d-header
@@ -32,6 +32,15 @@ body[data-context='post-fullscreen']
     opacity: .33
 
 // Override Pillar's notifications style
+.nav-notifications
+  .nav-item
+    height: 40px
+    width: 40px
+    display: flex
+    align-items: center
+    justify-content: center
+    font-size: 1.2em
+
 #notifications
   +media-xs
     bottom: 0
@@ -421,24 +430,12 @@ nav
     z-index: 9
 
     > ul
-      display: flex
-      align-items: center
-      margin: 0
-      padding: 0
-
       > li
-        align-items: center
-        display: inline-flex
-        justify-content: center
         margin-right: 15px
         white-space: nowrap
 
         &:last-child
           margin-right: 0
-
-        &.dropdown
-          position: relative
-          top: 2px
 
         a.login
           +media-xs
@@ -453,8 +450,6 @@ nav
         &.nav-notifications
           .nav-item
             +button-simple
-            border-radius: 50%
-            padding: 2px
 
             &.active
               background-color: var(--community-theme-color, $color-primary)
@@ -483,9 +478,8 @@ nav
   cursor: pointer
 
   img.avatar
-    border-radius: 50%
-    width: 32px
-    height: 32px
+    width: 40px
+    height: 40px
     background-color: $color-background-light
     padding: 3px
     margin-right: 10px
@@ -582,8 +576,21 @@ ul.dropdown-menu
   padding: 0 1px
 
 h1 .emoji
-  width: 32px
-  height: 32px
+  width: $h1-font-size
+  height: $h1-font-size
+
+h2 .emoji
+  height: $h2-font-size
+  width: $h2-font-size
+
+h3 .emoji
+  height: $h3-font-size
+  width: $h3-font-size
+
+
+h4 .emoji
+  height: $h4-font-size
+  width: $h4-font-size
 
 .user-avatar
   width: 28px
@@ -1283,6 +1290,11 @@ $wgt-dropdown-width: 150px
 .hidden
   display: none !important
   visibility: hidden !important
+
+.comment-reply-field,
+.comment-reply-field textarea,
+.comment-reply-preview-md
+  background-color: $color-background-dark
 
 // Animations
 @-webkit-keyframes fLoaderBackground
