Submit: Only show favicon after parsing link.
Avoids showing missing favicon by default.

--- a/src/templates/nodes/custom/dillo_post/edit_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/edit_embed.pug
@@ -25,7 +25,7 @@
 					class="input-field",
 					placeholder="{{ _('Press Ctrl+V or Command+V to paste or type the URL') }}",
 					value="{{ node.properties.content }}")
-					#item-icon.loading
+					#item-icon.loading.d-none
 						img(src="https://www.google.com/s2/favicons?domain={{ node.properties.content }}", alt="Favicon")
 
 				.input-content.name
