Fix notification links don't display on mobile
Closes #74

--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -217,7 +217,7 @@ script.
 	{% endif %}
 
 	// If the parameter ?fs is in the url, go imax!
-	if ('fs' in urlParams){
+	if ('fs' in urlParams || isMobile()){
 		enterFullscreen();
 	}
 
